1999-08-05  Tim Jenness  <timj@jach.hawaii.edu>

	* sculib/sculib_sinc.f (SINC): Rename as SCULIB_SINC

	* sculib/sculib_gensyconfn.f (SCULIB_GENSYCONFN): Rename SINC as
	SCULIB_SINC.

	* sculib/sculib_2pos_confn.f (SCULIB_2POS_CONFN): Rename SINC as
	SCULIB_SINC.

	* sculib/sculib_3pos_confn.f (SCULIB_3POS_CONFN): Rename SINC as
	SCULIB_SINC.

1999-08-04  Tim Jenness  <timj@jach.hawaii.edu>

	* scripts/remdbm.pl: Correct coordinate centre of filter.

1999-07-29  Tim Jenness  <timj@jach.hawaii.edu>

	* sculib/sculib_ranged.f (SCULIB_RANGED): Add STATUS
	checking. Tidy up header.

	* surflib/surflib_calc_output_grid.f (SURFLIB_CALC_OUTPUT_GRID):
	Parametrize max output size. Add STATUS to sculib_ranged.

1999-07-28  Tim Jenness  <timj@jach.hawaii.edu>

	SURF V1.4-3 - to include this patch to surflib_process_bols
		only (none of the other changes between 1.4-2 and here)
	
	* surflib/surflib_process_bols.f (SURFLIB_PROCESS_BOLS): Add
	LAT_OBS to SCULIB_CALC_APPARENT call (was not done before!!!)

1999-07-16  Tim Jenness  <timj@jach.hawaii.edu>

	* surflib/surflib_remove_dc_from_exp.f
	(SURFLIB_REMOVE_DC_FROM_EXP):  Check that the DCVALUE is good
	before subtracting it.

	* surflib/surflib_remove_dc_via_sect.f
	(SURFLIB_REMOVE_DC_VIA_SECT): Remove debug print statements.
	(SURFLIB_REMOVE_DC_VIA_SECT): Check that the DCVALUE is good
	before subtracting it.

1999-07-15  Tim Jenness  <timj@jach.hawaii.edu>

	* src/surf_rebin.f (SURF_REBIN): Improve the sky
	model input code to make it more flexible.

	* src/surf_grid_calcsky.f (SURF_GRID_CALCSKY): Improve the sky
	model input code to make it more flexible.

	* surflib/surflib_rem_grid.f (SURFLIB_REM_GRID): Check for bad
	values in the index array

	* surflib/surflib_fill_grid.f (SURFLIB_FILL_GRID): Check for bad
	values in the index array

	* surflib/surflib_histogram_grid.f (SURFLIB_HISTOGRAM_GRID): Check 
	for bad values in the index array.

1999-07-14  Tim Jenness  <timj@jach.hawaii.edu>
